--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,10 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
+        "laravel/passport": "~9.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.3",
+        "maatwebsite/excel": "^3.1",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
